Fixed radiogroup and aligned hero

--- a/src/assets/css/app/_home.scss
+++ b/src/assets/css/app/_home.scss
@@ -39,12 +39,7 @@
         }
 
         button {
-            padding: 1rem;
             border-radius: 35px;
-
-            &.p-button-outlined {
-                margin-left: 1.5rem;
-            }
         }
     }
 }
